// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider borderColor prop sets borderColor 1`] = `
.c0 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-color: #0000aa;
}

<hr
  className="c0"
/>
`;

exports[`Divider m prop sets margin 1`] = `
.c0 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  margin: 8px;
  border-color: #777777;
}

<hr
  className="c0"
/>
`;

exports[`Divider matches the snapshot 1`] = `
.c0 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-color: #777777;
}

<hr
  className="c0"
/>
`;

exports[`Divider width prop sets width 1`] = `
.c0 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  width: 50%;
  border-color: #777777;
}

<hr
  className="c0"
  width={0.5}
/>
`;
